fix bug of add to card button overflow on mobile view

--- a/src/page/StockDetail/StockDetail.css
+++ b/src/page/StockDetail/StockDetail.css
@@ -172,7 +172,7 @@ position: relative;
   background-color: transparent;
   /* width: 97px; */
   height: 32px;
-  min-width: 150px;
+  /* min-width: fit-content; */
   overflow: hidden;
   /* width: 200px; */
   min-height: 32px;
@@ -191,6 +191,15 @@ position: relative;
   transition: 0.3s ease-in-out;
   padding: 0px 8px;
 }
+
+#adding_id_stock_detail_company_information_head_right_watchlist{
+  min-width: 110px;
+}
+
+#already_in_stock_adding_id_stock_detail_company_information_head_right_watchlist{
+  min-width: 150px;
+}
+
 .stock_detail_company_information_head_right_watchlist:hover {
   border: 1px solid #97deced0;
   transition: 0.3s ease-in-out;
@@ -1291,11 +1300,14 @@ position: relative;
     padding: 6px 7px;
   }
   .stock_detail_company_information_head_right_watchlist {
-    width: fit-content;
-    min-width: fit-content;
-    height: fit-content;
-    min-height: fit-content;
     padding: 6px 7px;
+  }
+  #adding_id_stock_detail_company_information_head_right_watchlist{
+    min-width: 30px;
+  }
+  
+  #already_in_stock_adding_id_stock_detail_company_information_head_right_watchlist{
+    min-width: 30px;
   }
   .stock_detail_company_information_head_right span {
     display: none;
